--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
-    "jest-watch-typeahead": "^0.2.0"
+    "jest-watch-typeahead": "^0.2.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4"
   },
   "jest": {
     "transform": {
