--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test:watch": "jest . --watch"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.5.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -23,6 +24,8 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
+    "jest-haste-map": "^24.5.0",
+    "jest-resolve": "^24.5.0",
     "jest-watch-typeahead": "^0.2.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
